# rusty_rpc

./: Cargo.toml  README.md
examples/: Cargo.toml
examples/src/hello_world/: client.rs  hello_world.protocol  server.rs
examples/src/parent_child/: client.rs  parent_child.protocol  server.rs
examples/src/tree/: client.rs  server.rs  tree.protocol
paper/: citations.bib  main.tex
rusty_rpc/: Cargo.toml
rusty_rpc/src/: lib.rs  parser.rs
rusty_rpc/tests/: usage_tests.rs
rusty_rpc_demo/: Cargo.toml
rusty_rpc_demo/src/: client.rs  messages.rs  server.rs  stream_sink.rs
rusty_rpc_lib/: Cargo.toml
rusty_rpc_lib/src/: internal_for_macro.rs  lib.rs  messages.rs  server_collection.rs  service_collection.rs  traits.rs  util.rs
rusty_rpc_macro/: Cargo.toml
rusty_rpc_macro/src/: interface.rs  lib.rs  parser.rs
rusty_rpc_macro/tests/: simple_interface_file.interface  usage_tests.rs
