[package]
name = "examples"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello_world_client"
path = "src/hello_world/client.rs"

[[bin]]
name = "hello_world_server"
path = "src/hello_world/server.rs"

[[bin]]
name = "parent_child_client"
path = "src/parent_child/client.rs"

[[bin]]
name = "parent_child_server"
path = "src/parent_child/server.rs"

[[bin]]
name = "tree_client"
path = "src/tree/client.rs"

[[bin]]
name = "tree_server"
path = "src/tree/server.rs"

[dependencies]
tokio = { version = "1.18.2", features = ["macros", "rt", "rt-multi-thread"] }
serde = "1.0.137"

rusty_rpc_lib = { path = "../rusty_rpc_lib" }
rusty_rpc_macro = { path = "../rusty_rpc_macro" }
