[package]
name = "rusty_rpc_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "demo_client"
path = "src/client.rs"

[[bin]]
name = "demo_server"
path = "src/server.rs"

[dependencies]
futures = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.18.2", features = ["net", "macros", "rt-multi-thread", "io-util"] }
tokio-serde = { version = "0.8.0", features = ["json"] }
tokio-util = { version = "0.7.2", features = ["codec"] }
