[package]
name = "rusty_rpc_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
bytes = "1.1.0"
futures = "0.3.21"
rmp-serde = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
simple-error = "0.2.3"
tokio = { version = "1.18.2", features = ["net", "rt"] }
tokio-util = { version = "0.7.2", features = ["codec"] }
