[package]
name = "rusty_rpc_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
nom = "7.1.1"
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "1.0.95", features = ["full"] }

rusty_rpc_lib = { path = "../rusty_rpc_lib" }

[dev-dependencies]
tokio = { version = "1.18.2", features = ["rt", "macros"] }
